welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:8: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "R") => droite() avance()
                                ^BDR2:8: error: value avance is not a member of Unit
			case (x == "R") => droite() avance()
                                                    ^BDR2:9: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "L") => gauche() avance()
                                ^BDR2:9: error: value avance is not a member of Unit
			case (x == "L") => gauche() avance()
                                                    ^BDR2:10: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "I") =>	gauche() gauche() avance()
                                ^BDR2:10: error: value gauche is not a member of Unit
			case (x == "I") =>	gauche() gauche() avance()
                                                         ^BDR2:11: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "A") => avance()
                                ^BDR2:12: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "B") => avance() avance()
                                ^BDR2:12: error: value avance is not a member of Unit
			case (x == "B") => avance() avance()
                                                    ^BDR2:13: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "C") => avance() avance() avance()
                                ^BDR2:13: error: value avance is not a member of Unit
			case (x == "C") => avance() avance() avance()
                                                    ^BDR2:14: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "Z") => recule()
                                ^BDR2:15: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "Y") => recule() recule()
                                ^BDR2:15: error: value recule is not a member of Unit
			case (x == "Y") => recule() recule()
                                                    ^BDR2:16: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "X") => recule() recule() recule()
                                ^BDR2:16: error: value recule is not a member of Unit
			case (x == "X") => recule() recule() recule()
                                                    ^BDR2:17: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "D") => avance() avance() avance() avance()
                                ^BDR2:17: error: value avance is not a member of Unit
			case (x == "D") => avance() avance() avance() avance()
                                                    ^BDR2:18: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "E") => avance() avance() avance() avance() avance()
                                ^BDR2:18: error: value avance is not a member of Unit
			case (x == "E") => avance() avance() avance() avance() avance()
                                                    ^BDR2:19: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "F") => avance() avance() avance() avance() avance() avance()
                                ^BDR2:19: error: value avance is not a member of Unit
			case (x == "F") => avance() avance() avance() avance() avance() avance()
                                                    ^BDR2:20: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "W") => recule() recule() recule() recule()
                                ^BDR2:20: error: value recule is not a member of Unit
			case (x == "W") => recule() recule() recule() recule()
                                                    ^BDR2:21: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "V") => recule() recule() recule() recule() recule()
                                ^BDR2:21: error: value recule is not a member of Unit
			case (x == "V") => recule() recule() recule() recule() recule()
                                                    ^BDR2:22: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
			case (x == "U") => recule() recule() recule() recule() recule() recule()
                                ^BDR2:22: error: value recule is not a member of Unit
			case (x == "U") => recule() recule() recule() recule() recule() recule()
                                                    ^